added api to get survey result
