# controllers/surveys/hapiSchemas/schemas.js
@@ -25,9 +25,27 @@ const questionSchema = Joi.object({
       .default('boolean'),
     options: Joi.string()
       .trim()
-      .min(3)
+      .min(1)
       .max(10)
       .default(['yes', 'no']),
+  }))});
+
+const responseSchema = Joi.object({
+  createdBy: Joi.string()
+    .trim()
+    .min(3)
+    .max(30)
+    .required(),
+  questions: Joi.array().items(Joi.object({
+    questionId: Joi.string()
+      .trim()
+      .min(3)
+      .max(200)
+      .required(),
+    answer: Joi.string()
+      .trim()
+      .min(1)
+      .max(10),
   }))});
 
 const surveySchema = Joi.object({
@@ -57,4 +75,4 @@ const surveySchema = Joi.object({
   questions: Joi.array().items(Joi.string().max(30)),
 });
 
-module.exports = { surveySchema, questionSchema };
+module.exports = { surveySchema, questionSchema, responseSchema };
